--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
 	  <ul>
 		  <li><a href="module1.pdf">Link to Module 1</a></li>
 		  <li><a href="module2.pdf">Link to Module 2</a></li>
+		  <li>Link to Module 4</li>
+		<ol>	
+			<li><a href="Sitemap.jpg">Sitemap Sketch</a></li>	 
+			<li><a href="Navigation.jpg">Navigation Skecth</a></li> 
+			<li><a href="sitemap.pdf">Sitemap Diagram</a></li>
+	
+			<li><a href="navigation.pdf">Navigation Diagram</a></li>
+	
+			<li><a href="explanation.pdf">Explaination of pieces</a></li>		
+		</ol>
 	  </ul>
 
   </div>
