--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	  <ul>
 		  <li><a href="module1.pdf">Link to Module 1</a></li>
 		  <li><a href="module2.pdf">Link to Module 2</a></li>
+		  <li><a herf="module3.pdf">Link to Module 3</a></li>
 		  <li>Link to Module 4</li>
 		<ol>	
 			<li><a href="Sitemap.jpg">Sitemap Sketch</a></li>	 
