--- a/index.html
+++ b/index.html
@@ -28,6 +28,18 @@
 	
 			<li><a href="explanation.pdf">Explaination of pieces</a></li>		
 		</ol>
+		  <li>Link to Module 5</li>
+		<ol>
+			<li><a herf="Landing Page.jpg">Landing Page Sketch</a></li>
+			<li><a herf="Landing Page.pdf">Landing Page Wireframe</a></li>
+			<li><a herf="Writings.jpg">Writings Sketch</a></li>
+			<li><a herf="Writings.pdf">Writings Wireframe</a></li>
+			<li><a herf="Example1.jpg">Example Writing Sketch</a></li>
+			<li><a herf="example1.pdf">Example Writing Wireframe</a></li>
+			<li><a herf="Resume.jpg">Resume Sketch</a></li>
+			<li><a herf="Resume.pdf">Resume Wireframe</a></li>
+			<li><a herf="Explanation.doc">Explanation</a></li>
+		</ol>
 	  </ul>
 
   </div>
