--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
 			<li><a herf="Resume.pdf">Resume Wireframe</a></li>
 			<li><a herf="Explanation.doc">Explanation</a></li>
 		</ol>
+		  <li>Link to Module 6</li>
+		<ol>
+			<li><a herf="color-palatte.psd">Color Palatte
+			<li><a herf="typecard1.psd">Typecard
+			<li><a herf="Landing.psd">Landing Page Design
+			<li><a herf="Writing.psd">Writing Page Design
+			<li><a herf="Example.psd">Example Writing Page Design
+			<li><a herf="Resume.psd">Resume Page Design
+			<li><a herf="Explanation6.docx">Explanation
+		</ol>
 	  </ul>
 
   </div>
