--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
 		</ol>
 		  <li>Link to Module 6</li>
 		<ol>
-			<li><a herf="color-palatte.psd">Color Palatte
-			<li><a herf="typecard1.psd">Typecard
-			<li><a herf="Landing.psd">Landing Page Design
-			<li><a herf="Writing.psd">Writing Page Design
-			<li><a herf="Example.psd">Example Writing Page Design
-			<li><a herf="Resume.psd">Resume Page Design
-			<li><a herf="Explanation6.docx">Explanation
+			<li><a herf="Mod6/ColorPalatte.pdf">Color Palatte</a></li>
+			<li><a herf="Mod6/Typecard.pdf">Typecard</a></li>
+			<li><a herf="Mod6/Landing.pdf">Landing Page Design</a></li>
+			<li><a herf="Mod6/Writing.pdf">Writing Page Design</a></li>
+			<li><a herf="Mod6/Example.pdf">Example Writing Page Design</a></li>
+			<li><a herf="Mod6/Resume.pdf">Resume Page Design</a></li>
+			<li><a herf="Mod6/Explanation.docx">Explanation</a></li>
 		</ol>
 	  </ul>
 
