--- a/index.html
+++ b/index.html
@@ -20,25 +20,25 @@
 		  <li><a herf="module3.pdf">Link to Module 3</a></li>
 		  <li>Link to Module 4</li>
 		<ol>	
-			<li><a href="Sitemap.jpg">Sitemap Sketch</a></li>	 
-			<li><a href="Navigation.jpg">Navigation Skecth</a></li> 
-			<li><a href="sitemap.pdf">Sitemap Diagram</a></li>
+			<li><a href="Mod4/Sitemap.jpg">Sitemap Sketch</a></li>	 
+			<li><a href="Mod4/Navigation.jpg">Navigation Skecth</a></li> 
+			<li><a href="Mod4/Sitemap.pdf">Sitemap Diagram</a></li>
 	
-			<li><a href="navigation.pdf">Navigation Diagram</a></li>
+			<li><a href="Mod4/Navigation.pdf">Navigation Diagram</a></li>
 	
-			<li><a href="explanation.pdf">Explaination of pieces</a></li>		
+			<li><a href="Mod4/Explanation.pdf">Explaination of pieces</a></li>		
 		</ol>
 		  <li>Link to Module 5</li>
 		<ol>
-			<li><a herf="Landing Page.jpg">Landing Page Sketch</a></li>
-			<li><a herf="Landing Page.pdf">Landing Page Wireframe</a></li>
-			<li><a herf="Writings.jpg">Writings Sketch</a></li>
-			<li><a herf="Writings.pdf">Writings Wireframe</a></li>
-			<li><a herf="Example1.jpg">Example Writing Sketch</a></li>
-			<li><a herf="example1.pdf">Example Writing Wireframe</a></li>
-			<li><a herf="Resume.jpg">Resume Sketch</a></li>
-			<li><a herf="Resume.pdf">Resume Wireframe</a></li>
-			<li><a herf="Explanation.doc">Explanation</a></li>
+			<li><a herf="Mod5/Landing Page.jpg">Landing Page Sketch</a></li>
+			<li><a herf="Mod5/Landing Page.pdf">Landing Page Wireframe</a></li>
+			<li><a herf="Mod5/Writings.jpg">Writings Sketch</a></li>
+			<li><a herf="Mod5/Writings.pdf">Writings Wireframe</a></li>
+			<li><a herf="Mod5/Example.jpg">Example Writing Sketch</a></li>
+			<li><a herf="Mod5/Example.pdf">Example Writing Wireframe</a></li>
+			<li><a herf="Mod5/Resume.jpg">Resume Sketch</a></li>
+			<li><a herf="Mod5/Resume.pdf">Resume Wireframe</a></li>
+			<li><a herf="Mod5/Explanation.doc">Explanation</a></li>
 		</ol>
 		  <li>Link to Module 6</li>
 		<ol>
