--- a/index.html
+++ b/index.html
@@ -30,26 +30,27 @@
 		</ol>
 		  <li>Link to Module 5</li>
 		<ol>
-			<li><a herf="Mod5/Landing Page.jpg">Landing Page Sketch</a></li>
-			<li><a herf="Mod5/Landing Page.pdf">Landing Page Wireframe</a></li>
-			<li><a herf="Mod5/Writings.jpg">Writings Sketch</a></li>
-			<li><a herf="Mod5/Writings.pdf">Writings Wireframe</a></li>
-			<li><a herf="Mod5/Example.jpg">Example Writing Sketch</a></li>
-			<li><a herf="Mod5/Example.pdf">Example Writing Wireframe</a></li>
-			<li><a herf="Mod5/Resume.jpg">Resume Sketch</a></li>
-			<li><a herf="Mod5/Resume.pdf">Resume Wireframe</a></li>
-			<li><a herf="Mod5/Explanation.doc">Explanation</a></li>
+			<li><a href="Mod5/Landing Page.jpg">Landing Page Sketch</a></li>
+			<li><a href="Mod5/Landing Page.pdf">Landing Page Wireframe</a></li>
+			<li><a href="Mod5/Writings.jpg">Writings Sketch</a></li>
+			<li><a href="Mod5/Writings.pdf">Writings Wireframe</a></li>
+			<li><a href="Mod5/Example.jpg">Example Writing Sketch</a></li>
+			<li><a href="Mod5/Example.pdf">Example Writing Wireframe</a></li>
+			<li><a href="Mod5/Resume.jpg">Resume Sketch</a></li>
+			<li><a href="Mod5/Resume.pdf">Resume Wireframe</a></li>
+			<li><a href="Mod5/Explanation.doc">Explanation</a></li>
 		</ol>
 		  <li>Link to Module 6</li>
 		<ol>
-			<li><a herf="Mod6/ColorPalatte.pdf">Color Palatte</a></li>
-			<li><a herf="Mod6/Typecard.pdf">Typecard</a></li>
-			<li><a herf="Mod6/Landing.pdf">Landing Page Design</a></li>
-			<li><a herf="Mod6/Writing.pdf">Writing Page Design</a></li>
-			<li><a herf="Mod6/Example.pdf">Example Writing Page Design</a></li>
-			<li><a herf="Mod6/Resume.pdf">Resume Page Design</a></li>
-			<li><a herf="Mod6/Explanation.docx">Explanation</a></li>
+			<li><a href="Mod6/ColorPalatte.pdf">Color Palatte</a></li>
+			<li><a href="Mod6/Typecard.pdf">Typecard</a></li>
+			<li><a href="Mod6/Landing.pdf">Landing Page Design</a></li>
+			<li><a href="Mod6/Writing.pdf">Writing Page Design</a></li>
+			<li><a href="Mod6/Example.pdf">Example Writing Page Design</a></li>
+			<li><a href="Mod6/Resume.pdf">Resume Page Design</a></li>
+			<li><a href="Mod6/Explanation.docx">Explanation</a></li>
 		</ol>
+		  <li><a href="Module8.docx">Link to Module 8</a></li>
 	  </ul>
 
   </div>
