--- a/index.html
+++ b/index.html
@@ -51,6 +51,14 @@
 			<li><a href="Mod6/Explanation.docx">Explanation</a></li>
 		</ol>
 		  <li><a href="Module8.docx">Link to Module 8</a></li>
+		  <li>Link to Module 9</li>
+		<ol>
+			<li><a href="Mod9/CameraImage.jpeg">Camera Image</a></li>
+			<li><a href="Mod9/WebReady.jpeg">Web Ready Camera Image</a></li>
+			<li><a href="Mod9/PortfolioHeader.psd">Portfolio Header</a></li>
+			<li><a href="Mod9/PortfolioHeader.png">Web Ready Portfolio Header</a></li>
+		</ol>
+		  <li><a href="Design Doc.zip">Doc Design Packet (.ZIP)</a></li>
 	  </ul>
 
   </div>
