--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 		  <li><a href="Module8.docx">Link to Module 8</a></li>
 		  <li>Link to Module 9</li>
 		<ol>
-			<li><a href="Mod9/CameraImage.jpeg">Camera Image</a></li>
-			<li><a href="Mod9/WebReady.jpeg">Web Ready Camera Image</a></li>
+			<li><a href="Mod9/CameraImage.JPG>Camera Image</a></li>
+			<li><a href="Mod9/WebReady.jpg">Web Ready Camera Image</a></li>
 			<li><a href="Mod9/PortfolioHeader.psd">Portfolio Header</a></li>
 			<li><a href="Mod9/PortfolioHeader.png">Web Ready Portfolio Header</a></li>
 		</ol>
