--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
 			<li><a href="Mod9/PortfolioHeader.psd">Portfolio Header</a></li>
 			<li><a href="Mod9/PortfolioHeader.png">Web Ready Portfolio Header</a></li>
 		</ol>
+		  <li>Module 13 Codecademy Activities are completed</li>
 		  <li><a href="Design Doc.zip">Doc Design Packet (.ZIP)</a></li>
+		  <li><a href="http://cassandrad.github.io/home/index.html">Link to my Portfolio</a></li>
 	  </ul>
 
   </div>
